--- a/DaftarMataKuliah/app/src/main/res/values/strings.xml
+++ b/DaftarMataKuliah/app/src/main/res/values/strings.xml
@@ -1,3 +1,25 @@
 <resources>
     <string name="app_name">DaftarMataKuliah</string>
+    <string name="matkul1">Mobile Computing</string>
+    <string name="sks1">3 SKS</string>
+    <string name="matkul2">Dasar-Dasar Pemrograman</string>
+    <string name="sks2">3 SKS</string>
+    <string name="matkul3">Animasi Komputer</string>
+    <string name="sks3">3 SKS</string>
+    <string name="matkul4">Pendidikan Pancasila</string>
+    <string name="sks4">2 SKS</string>
+    <string name="matkul5">Perancangan dan Pemrograman Web</string>
+    <string name="sks5">3 SKS</string>
+    <string name="matkul6">Teknologi Informasi</string>
+    <string name="sks6">3 SKS</string>
+    <string name="matkul7">Kewirausahaan</string>
+    <string name="sks7">2 SKS</string>
+    <string name="matkul8">Komputer dan Masyarakat</string>
+    <string name="sks8">2 SKS</string>
+    <string name="matkul9">Teori Bahasa dan Automata</string>
+    <string name="sks9">2 SKS</string>
+    <string name="matkul10">Logika dan Penalaran Ilmiah</string>
+    <string name="sks10">2 SKS</string>
+    <string name="matkul11">Data Mining</string>
+    <string name="sks11">3 SKS</string>
 </resources>
